# sm-logtool

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  config.yaml  header-template.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  standards.yml  test.yml
docs/: RELEASE_NOTES_TEMPLATE.md  SEARCH_NOTES.md  release_0.9.5.md  syntax_highlighting.md
sample_logs/: README.txt
scripts/: benchmark_search.py  check_release_defaults.py  run_cli_matrix.sh
sm_logtool/: __init__.py  cli.py  config.py  highlighting.py  log_kinds.py  log_parsers.py  logfiles.py  result_formatting.py  result_modes.py  result_rendering.py  search.py  search_modes.py  search_planning.py  staging.py  syntax.py
sm_logtool/ui/: __init__.py  app.py  clipboard.py  theme_importer.py  theme_studio.py  themes.py
test/: _pytest_stub.py  test_basic.py  test_cli.py  test_clipboard.py  test_config.py  test_line_length_policy.py  test_log_kinds.py  test_log_parsers.py  test_logfiles.py  test_public_docstrings.py  test_result_formatting.py  test_result_rendering.py  test_search.py  test_search_planning.py  test_staging.py  test_syntax.py  test_terminal_clipboard_protocol.py  test_theme_importer.py  test_ui_bindings.py  test_ui_menu.py  test_unittest_pytest_bridge.py
