[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sm-logtool"
version = "0.9.2"
description = "Interactive TUI and non-interactive CLI helper for exploring SmarterMail logs on Linux servers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "John", email = "john@example.com"}
]
keywords = ["smartermail", "logs", "tui"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "textual>=0.55",
  "rich>=13.0",
  "PyYAML>=6.0",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
speedups = [
  "rapidfuzz>=3.0",
]

[project.scripts]
sm-logtool = "sm_logtool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sm_logtool*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["test"]
