[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sm-logtool"
version = "0.9.7"
description = "Interactive TUI and non-interactive CLI helper for exploring SmarterMail logs on Linux servers"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [
  {name = "John", email = "john@example.com"}
]
keywords = ["smartermail", "logs", "tui"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "textual>=0.55",
  "rich>=13.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]
lint = [
  "ruff>=0.6",
]
typecheck = [
  "mypy>=1.11",
  "types-PyYAML>=6.0",
]
speedups = [
  "rapidfuzz>=3.0",
]

[project.scripts]
sm-logtool = "sm_logtool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sm_logtool*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["test"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E9"]

[tool.mypy]
python_version = "3.10"
files = ["sm_logtool"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sm_logtool.ui.app"]
ignore_errors = true
